[project]
name = "student-performance-analytics"
version = "1.0.0"
description = "AI-powered student performance analytics application with function calling, safety features, and Trello integration"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.39.0",
    "openai>=1.54.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "py-trello>=0.19.0",
    "numpy>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
